# ko-llm-bench-suite

./: .gitignore  LICENSE  MODEL_DETAILS.md  README.md  README_EN.md  REPORT_PLAN.md  REPORT_PLAN_GPU.md  generate_visualizations.py  generate_visualizations_extra.py  kobench.py  pyproject.toml  requirements.txt  run_evaluation.py  run_new_tests.sh  run_screenshot_tests.sh  setup.sh
benchmarks/: track7_prompts.json
configs/: default.yaml
eval_framework/: config.py  evafrill_runner.py  evafrill_server.py  runner.py
kobench/: __init__.py  config.py  evafrill_runner.py  evafrill_server.py  judge.py  report.py  runner.py  scoring.py
modelfiles/: Modelfile.v2-Q4_K_M  Modelfile.v2-Q8_0  Modelfile.v2-f16
reports/: COMPREHENSIVE_MODEL_COMPARISON.md  EVALUATION_REPORT_FULL.md  FINAL_REPORT_GPU.md  report_20260311_134844.md  report_20260312_192305.html  report_20260312_195322.html  report_20260330_002126.html  report_20260330_002126.md  report_20260330_114038.md  report_20260330_140307.md  report_20260407_144036.html  report_20260407_144036.md  report_20260407_145007.html  report_20260407_145008.md  report_20260407_153150.md  report_20260407_170635.html  report_20260407_172252.html  report_20260407_172718.html  report_20260407_172719.md  report_20260407_173206.html
results/: full_results_20260312_192305.json  full_results_20260330_114038.json  full_results_20260407_172252.json  full_results_20260407_172719.json  scorecard.json  track1_20260326_194807.json  track1_korean_bench_20260312_181703.json  track1_korean_bench_checkpoint.json  track2_ko_bench_checkpoint.json  (+11 more)
(+212 files in other folders)
