[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends"

[project]
name = "ko-llm-bench-suite"
version = "0.1.0"
description = "한국어 LLM 종합 벤치마크 평가 도구 (Korean LLM Benchmark Suite)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "pathcosmos"}
]
keywords = ["llm", "benchmark", "korean", "evaluation", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.urls]
Homepage = "https://github.com/pathcosmos/ko-llm-bench-suite"
Repository = "https://github.com/pathcosmos/ko-llm-bench-suite"
